--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"node": ">=10"
 	},
 	"scripts": {
-		"test": "xo && nyc ava",
+		"test": "xo && nyc ava && eslint test/regex-shorthand.js",
 		"integration": "./test/integration/test.js"
 	},
 	"files": [
