eat your dog food with eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,12 +9,40 @@
     "Instant": "function",
     "ZonedInstant": "function"
   },
+  "extends": [
+    "plugin:unicorn/recommended"
+  ],
   "rules": {
+    "unicorn/catch-error-name": "error",
+    "unicorn/explicit-length-check": "error",
+    "unicorn/filename-case": "error",
+    "unicorn/no-abusive-eslint-disable": "error",
+    "unicorn/no-process-exit": "error",
+    "unicorn/throw-new-error": "error",
+    "unicorn/number-literal-case": "error",
+    "unicorn/escape-case": "error",
+    "unicorn/no-array-instanceof": "error",
+    "unicorn/no-new-buffer": "error",
+    "unicorn/no-hex-escape": "error",
+    "unicorn/custom-error-definition": "off",
+    "unicorn/prefer-starts-ends-with": "error",
+    "unicorn/prefer-type-error": "error",
+    "unicorn/no-fn-reference-in-iterator": "warn",
+    "unicorn/import-index": "error",
+    "unicorn/new-for-builtins": "error",
+    "unicorn/regex-shorthand": "error",
+    "unicorn/prefer-spread": "error",
+    "unicorn/error-message": "error",
+    "unicorn/no-unsafe-regex": "off",
+    "unicorn/prefer-add-event-listener": "error",
+    "unicorn/no-console-spaces": "error",
+    "unicorn/no-unreadable-array-destructuring": "error",
+    "unicorn/no-unused-properties": "warn",
+    "unicorn/prefer-node-append": "error",
+    "unicorn/prefer-query-selector": "error",
     "arrow-body-style": "off",
     "no-console": "off",
     "no-continue": "off",
-    "emmanuel/no-very-large-array": ["off", {"maxValue": 10}],
-    "emmanuel/no-number-useless": "warn",
     "no-undef": "warn",
     "no-invalid-regexp": "warn",
     "no-restricted-properties": ["warn", {
@@ -106,7 +134,6 @@
     ]
   },
   "plugins": [
-    "markdown",
-    "emmanuel"
+    "unicorn"
   ]
 }
