--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,12 @@
 {
-  "parser": "babel-eslint",
+  "env": {
+    "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2019,
+    "sourceType": "module"
+  },
   "globals": {
-    "BigInt": "function",
-    "BigInt64Array": "function",
-    "BigUint64Array": "function",
-    "CivilDate": "function",
-    "CivilDateTime": "function",
-    "Instant": "function",
-    "ZonedInstant": "function"
   },
   "extends": [
     "plugin:unicorn/recommended"
